--- a/pom.xml
+++ b/pom.xml
@@ -23,25 +23,9 @@
     <packaging>pom</packaging>
 
     <properties>
-        <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
-        <skipTests>true</skipTests>
         <java.version>1.8</java.version>
-        <cloud.version>Hoxton.RELEASE</cloud.version>
-        <alibaba.version>2.2.0.RELEASE</alibaba.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
-        <mybatis.generator.version>3.3.1</mybatis.generator.version>
-        <mysql.version>8.0.28</mysql.version>
         <swagger.version>2.9.2</swagger.version>
-        <fastjson.version>1.2.29</fastjson.version>
-        <httpclient.version>4.5.1</httpclient.version>
-        <easyexcel.version>2.2.0-beta2</easyexcel.version>
-        <aliyun.version>4.5.14</aliyun.version>
-        <jodatime.version>2.10.1</jodatime.version>
-        <jwt.version>0.7.0</jwt.version>
-        <xxl-job.version>2.3.0</xxl-job.version>
-        <aliyun.oss.version>3.9.0</aliyun.oss.version>
-        <tencent.qcloud>5.6.54</tencent.qcloud>
-        <velocity.version>2.2</velocity.version>
     </properties>
 
     <dependencyManagement>
@@ -50,21 +34,8 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
-                <version>${spring.boot.version}</version>
+                <version>2.2.1.RELEASE</version>
                 <scope>test</scope>
-            </dependency>
-            <!-- TODO knife4j-spring-boot-starter -->
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-spring-boot-starter</artifactId>
-                <version>2.0.8</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>${alibaba.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
             <!-- mybatis plus -->
             <dependency>
@@ -72,77 +43,67 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
-            <!-- spring cloud -->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <!-- mybatis plus generator -->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-generator</artifactId>
-                <version>${mybatis.generator.version}</version>
+                <version>${mybatis-plus.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity-engine-core</artifactId>
-                <version>${velocity.version}</version>
+                <version>2.2</version>
             </dependency>
             <!-- mysql -->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
+                <version>8.0.28</version>
             </dependency>
-            <!-- TODO jjwt -->
+            <!-- spring cloud -->
             <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>${jwt.version}</version>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
-            <!-- TODO httpclient -->
+            <!-- spring cloud alibaba -->
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>${httpclient.version}</version>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.2.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <!-- json -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
+                <version>1.2.29</version>
             </dependency>
             <!-- excel -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
-                <version>${easyexcel.version}</version>
+                <version>2.2.0-beta2</version>
             </dependency>
             <!-- aliyun -->
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-core</artifactId>
-                <version>${aliyun.version}</version>
+                <version>4.5.14</version>
             </dependency>
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
-                <version>${aliyun.oss.version}</version>
+                <version>3.9.0</version>
             </dependency>
             <!-- date time formatter -->
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
-                <version>${jodatime.version}</version>
-            </dependency>
-            <!-- TODO xxl-job-core -->
-            <dependency>
-                <groupId>com.xuxueli</groupId>
-                <artifactId>xxl-job-core</artifactId>
-                <version>${xxl-job.version}</version>
+                <version>2.10.1</version>
             </dependency>
             <!-- swagger -->
             <dependency>
@@ -159,7 +120,38 @@
             <dependency>
                 <groupId>com.qcloud</groupId>
                 <artifactId>cos_api</artifactId>
-                <version>${tencent.qcloud}</version>
+                <version>5.6.54</version>
+            </dependency>
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>vod_api</artifactId>
+                <version>2.1.4</version>
+            </dependency>
+
+            <!-- TODO what's the functions of following dependencies? -->
+            <!-- knife4j-spring-boot-starter -->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>2.0.8</version>
+            </dependency>
+            <!-- jjwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.7.0</version>
+            </dependency>
+            <!-- httpclient -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.1</version>
+            </dependency>
+            <!-- xxl-job-core -->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>2.3.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
