--- a/service/vod/src/main/resources/application.yaml
+++ b/service/vod/src/main/resources/application.yaml
@@ -13,6 +13,9 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  servlet:
+    multipart:
+      max-file-size: -1
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
