--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,23 +12,11 @@
     <packaging>pom</packaging>
     <modules>
         <module>vod</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>cn.edu.whut.springbear</groupId>
-            <artifactId>model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.edu.whut.springbear</groupId>
-            <artifactId>service-util</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 </project>
