--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
                 <artifactId>vod_api</artifactId>
                 <version>2.1.4</version>
             </dependency>
+            <dependency>
+                <groupId>com.github.binarywang</groupId>
+                <artifactId>weixin-java-mp</artifactId>
+                <version>4.1.0</version>
+            </dependency>
 
             <!-- aliyun sdk -->
             <dependency>
