--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,6 @@
                 <artifactId>velocity-engine-core</artifactId>
                 <version>2.2</version>
             </dependency>
-            <!-- json -->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>1.2.29</version>
-            </dependency>
             <!-- excel -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -84,9 +78,14 @@
             <dependency>
                 <groupId>com.github.binarywang</groupId>
                 <artifactId>weixin-java-mp</artifactId>
-                <version>4.1.0</version>
+                <version>2.7.0</version>
             </dependency>
-
+            <!-- dom4j -->
+            <dependency>
+                <groupId>dom4j</groupId>
+                <artifactId>dom4j</artifactId>
+                <version>1.1</version>
+            </dependency>
             <!-- aliyun sdk -->
             <dependency>
                 <groupId>com.aliyun</groupId>
@@ -113,6 +112,12 @@
                 <version>2.2.0.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <!-- json -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.29</version>
             </dependency>
 
             <!-- TODO what's the functions of following dependencies? -->
