--- a/service/wechat/pom.xml
+++ b/service/wechat/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>weixin-java-mp</artifactId>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>cn.edu.whut.springbear</groupId>
