fix the problem that can't view the course details when user enter course name in the search input box and some problems we have known.

--- a/service/service-wechat/src/main/resources/application.properties
+++ b/service/service-wechat/src/main/resources/application.properties
@@ -5,4 +5,4 @@ course.viewBaseUrl=http://mobile.vipgz4.91tunnel.com
 course.subscribeMsg=Thank you for your attention! Let's become better together!
 course.aboutMe=https://springbear.blog.csdn.net
 course.contactMe=springbear@163.com
-course.liveCourse=http://mobile.vipgz4.91tunnel.com/#/live/
+course.courseDetailUrl=http://mobile.vipgz4.91tunnel.com/#/course/detail
