complete the function of playing the course video saved on the tencent cloud.

--- a/service/service-user/src/main/resources/application.properties
+++ b/service/service-user/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 wechat.mpAppId=wx6e925452d38d9b30
 wechat.mpAppSecret=fa078dcf0a68aec5aacbafde745f01af
 wechat.authorizedCallbackUrl=http://course.5gzvip.91tunnel.com/api/user/info
+token.signKey=course-backend
