--- a/service/service-vod/src/main/resources/application.properties
+++ b/service/service-vod/src/main/resources/application.properties
@@ -2,3 +2,4 @@ tencent.cloud.bucket=course-1308741720
 tencent.cloud.region=ap-chongqing
 tencent.cloud.secretId=AKIDhFbktxxDJLG4e5cyIvPgkaEg4SindGgw
 tencent.cloud.secretKey=6wcCbkgVAf2EBsMdfy6C7nHbopfJo8OR
+tencent.vod.appId=1308741720
