add interceptors to check the privilege of the user type, and complete the function of user submit the course order.

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>client-user</module>
         <module>client-course</module>
+        <module>client-activity</module>
     </modules>
 
     <properties>
