complete the function of user pay for the course order, especially it is just a simulation because we don't have the qualification to obtain the pay service from the wechat.

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,6 +16,7 @@
         <module>client-user</module>
         <module>client-course</module>
         <module>client-activity</module>
+        <module>client-order</module>
     </modules>
 
     <properties>
