--- a/service/service-user/pom.xml
+++ b/service/service-user/pom.xml
@@ -14,13 +14,14 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <wechat.mp.version>2.7.0</wechat.mp.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>weixin-java-mp</artifactId>
-            <version>2.7.0</version>
+            <version>${wechat.mp.version}</version>
         </dependency>
         <dependency>
             <groupId>dom4j</groupId>
