--- a/service/service-wechat/src/main/resources/application.properties
+++ b/service/service-wechat/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 wechat.mpAppId=wx6e925452d38d9b30
 wechat.mpAppSecret=fa078dcf0a68aec5aacbafde745f01af
 wechat.token=course-backend
+wechat.templateId=4bTafg2x6tI-19bXgSLN9TDYePVFXvzBZCj7p5uToZE
 course.viewBaseUrl=http://mobile.vipgz4.91tunnel.com
 course.subscribeMsg=Thank you for your attention! Let's become better together!
 course.aboutMe=https://springbear.blog.csdn.net
