--- a/client/client-order/pom.xml
+++ b/client/client-order/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>client-activity</artifactId>
+    <artifactId>client-order</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
