complete the CRUD function of live course management, also associated with the MTCloud platform

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,7 @@
         <module>service-activity</module>
         <module>service-user</module>
         <module>service-wechat</module>
+        <module>service-live</module>
     </modules>
 
     <properties>
