--- a/client/client-vod/pom.xml
+++ b/client/client-vod/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>client-course</artifactId>
+    <artifactId>client-vod</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
