--- a/client/pom.xml
+++ b/client/pom.xml
@@ -14,7 +14,7 @@
 
     <modules>
         <module>client-user</module>
-        <module>client-course</module>
+        <module>client-vod</module>
         <module>client-activity</module>
         <module>client-order</module>
     </modules>
