--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -32,3 +32,7 @@ spring:
           uri: lb://course-service-wechat
           predicates:
             - Path=/*/wechat/**
+        - id: course-service-live
+          uri: lb://course-service-live
+          predicates:
+            - Path=/*/live/**
