--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,17 @@
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>3.9.0</version>
             </dependency>
+            <dependency>
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.json-lib</groupId>
+                <artifactId>json-lib</artifactId>
+                <version>2.4</version>
+                <classifier>jdk15</classifier>
+            </dependency>
             <!-- jjwt -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
