--- a/service/service-order/pom.xml
+++ b/service/service-order/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>cn.edu.whut.springbear</groupId>
-            <artifactId>client-course</artifactId>
+            <artifactId>client-vod</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
