--- a/service/service-user/src/main/resources/application.yml
+++ b/service/service-user/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  main:
+    allow-bean-definition-overriding: true
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
