--- a/service/service-activity/src/main/resources/application.yml
+++ b/service/service-activity/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://localhost:3306/course_activigy?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/course_activity?characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: admin
     password: admin
