--- a/service/service-wechat/pom.xml
+++ b/service/service-wechat/pom.xml
@@ -39,4 +39,13 @@
             <version>${wechat.mp.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
